Чтение и запись в файлы-02

--- a/15.1. Чтение и запись в файлы.ipynb
+++ b/15.1. Чтение и запись в файлы.ipynb
@@ -49,9 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Я на чердаке лежу у себя на дому.\n",
+      "Мне скучно до зарезу Бог знает почему.\n"
+     ]
+    }
+   ],
    "source": [
     "MyFile = open('Совы нежные.txt', 'r', encoding='UTF8')\n",
     "print(MyFile.read(72))\n",
@@ -60,9 +69,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Я на чердаке лежу у себя на дому.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "MyFile = open('Совы нежные.txt', 'r', encoding='UTF8')\n",
     "print(MyFile.readline())\n",
@@ -71,9 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Я на чердаке лежу у себя на дому.\\n', 'Мне скучно до зарезу Бог знает почему.\\n', 'Вдруг слышу за собою совы нежные \"У-юй\" -\\n', 'У меня на душе стало веселее,\\n', 'А-лай-лай-лай, стало веселее.\\n', '\\n', 'Я по дороге иду к другу-разбойнику,\\n', 'Мне тоскливо одному в незнакомом краю.\\n', 'Вдруг слышу за собою совы нежные \"У-юй\" -\\n', 'У меня на душе стало веселее,\\n', 'А-лай-лай-лай, стало веселее.\\n', '\\n', 'Я на веревке вишу, ногами болтаю,\\n', 'Мне очень бы хотелось побольше воздуху.\\n', 'Вдруг слышу за собою совы нежные \"У-юй\" -\\n', 'У меня на душе стало веселее,\\n', 'А-лай-лай-лай стало веселее.\\n', '\\n', 'Я в большом котле киплю у черта на пиру,\\n', '\"Мне плакать уж ни к чему\", - лезет мне в голову\\n', 'Вдруг слышу за собою совы нежные \"У-юй\" -\\n', 'У меня на душе стало веселее,\\n', 'А-лай-лай-лай стало веселее.\\n', '\\n', 'Я на чердаке лежу у себя на дому.\\n', 'Мне скучно до зарезу Бог знает почему.\\n', 'Вдруг слышу за собою совы нежные \"У-юй\" -\\n', '\"Cпоем вместе, е-ла-ла-лай-ла-лай, ла-лай-лай-лай\" -\\n', 'Говорю я сове.']\n"
+     ]
+    }
+   ],
    "source": [
     "MyFile = open('Совы нежные.txt', 'r', encoding='UTF8')\n",
     "print(MyFile.readlines())\n",
@@ -82,9 +108,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Я на чердаке лежу у себя на дому.\n",
+      "\n",
+      "Мне скучно до зарезу Бог знает почему.\n",
+      "\n",
+      "Вдруг слышу за собою совы нежные \"У-юй\" -\n",
+      "\n",
+      "У меня на душе стало веселее,\n",
+      "\n",
+      "А-лай-лай-лай, стало веселее.\n",
+      "\n",
+      "\n",
+      "\n",
+      "Я по дороге иду к другу-разбойнику,\n",
+      "\n",
+      "Мне тоскливо одному в незнакомом краю.\n",
+      "\n",
+      "Вдруг слышу за собою совы нежные \"У-юй\" -\n",
+      "\n",
+      "У меня на душе стало веселее,\n",
+      "\n",
+      "А-лай-лай-лай, стало веселее.\n",
+      "\n",
+      "\n",
+      "\n",
+      "Я на веревке вишу, ногами болтаю,\n",
+      "\n",
+      "Мне очень бы хотелось побольше воздуху.\n",
+      "\n",
+      "Вдруг слышу за собою совы нежные \"У-юй\" -\n",
+      "\n",
+      "У меня на душе стало веселее,\n",
+      "\n",
+      "А-лай-лай-лай стало веселее.\n",
+      "\n",
+      "\n",
+      "\n",
+      "Я в большом котле киплю у черта на пиру,\n",
+      "\n",
+      "\"Мне плакать уж ни к чему\", - лезет мне в голову\n",
+      "\n",
+      "Вдруг слышу за собою совы нежные \"У-юй\" -\n",
+      "\n",
+      "У меня на душе стало веселее,\n",
+      "\n",
+      "А-лай-лай-лай стало веселее.\n",
+      "\n",
+      "\n",
+      "\n",
+      "Я на чердаке лежу у себя на дому.\n",
+      "\n",
+      "Мне скучно до зарезу Бог знает почему.\n",
+      "\n",
+      "Вдруг слышу за собою совы нежные \"У-юй\" -\n",
+      "\n",
+      "\"Cпоем вместе, е-ла-ла-лай-ла-лай, ла-лай-лай-лай\" -\n",
+      "\n",
+      "Говорю я сове.\n"
+     ]
+    }
+   ],
    "source": [
     "MyFile = open('Совы нежные.txt', 'r', encoding='UTF8')\n",
     "for line in MyFile:\n",
@@ -100,7 +190,83 @@
    "source": [
     "MyFile_02 = open('namefile.txt', 'w')\n",
     "MyFile_02.write('tttt')\n",
-    "print('zzzz', file=MyFile_02)"
+    "print('zzzz', file=MyFile_02)\n",
+    "MyFile_02.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Я на чердаке лежу у себя на дому.\n",
+      "\n",
+      "Мне скучно до зарезу Бог знает почему.\n",
+      "\n",
+      "Вдруг слышу за собою совы нежные \"У-юй\" -\n",
+      "\n",
+      "У меня на душе стало веселее,\n",
+      "\n",
+      "А-лай-лай-лай, стало веселее.\n",
+      "\n",
+      "\n",
+      "\n",
+      "Я по дороге иду к другу-разбойнику,\n",
+      "\n",
+      "Мне тоскливо одному в незнакомом краю.\n",
+      "\n",
+      "Вдруг слышу за собою совы нежные \"У-юй\" -\n",
+      "\n",
+      "У меня на душе стало веселее,\n",
+      "\n",
+      "А-лай-лай-лай, стало веселее.\n",
+      "\n",
+      "\n",
+      "\n",
+      "Я на веревке вишу, ногами болтаю,\n",
+      "\n",
+      "Мне очень бы хотелось побольше воздуху.\n",
+      "\n",
+      "Вдруг слышу за собою совы нежные \"У-юй\" -\n",
+      "\n",
+      "У меня на душе стало веселее,\n",
+      "\n",
+      "А-лай-лай-лай стало веселее.\n",
+      "\n",
+      "\n",
+      "\n",
+      "Я в большом котле киплю у черта на пиру,\n",
+      "\n",
+      "\"Мне плакать уж ни к чему\", - лезет мне в голову\n",
+      "\n",
+      "Вдруг слышу за собою совы нежные \"У-юй\" -\n",
+      "\n",
+      "У меня на душе стало веселее,\n",
+      "\n",
+      "А-лай-лай-лай стало веселее.\n",
+      "\n",
+      "\n",
+      "\n",
+      "Я на чердаке лежу у себя на дому.\n",
+      "\n",
+      "Мне скучно до зарезу Бог знает почему.\n",
+      "\n",
+      "Вдруг слышу за собою совы нежные \"У-юй\" -\n",
+      "\n",
+      "\"Cпоем вместе, е-ла-ла-лай-ла-лай, ла-лай-лай-лай\" -\n",
+      "\n",
+      "Говорю я сове.\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open ('Совы нежные.txt', 'r', encoding='UTF8') as MyFile:\n",
+    "    for line in MyFile:\n",
+    "        print(line)"
    ]
   },
   {
