--- a/15.1. Чтение и запись в файлы.ipynb
+++ b/15.1. Чтение и запись в файлы.ipynb
@@ -6,6 +6,27 @@
    "metadata": {},
    "outputs": [
     {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'Совы нежные.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-ff91e4771380>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmyFile\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Совы нежные.txt'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'Совы нежные.txt'"
+     ]
+    }
+   ],
+   "source": [
+    "myFile = open('Совы нежные.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -184,14 +205,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "MyFile_02 = open('namefile.txt', 'w')\n",
     "MyFile_02.write('tttt')\n",
     "print('zzzz', file=MyFile_02)\n",
-    "MyFile_02.close()"
+    "MyFile.close()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ttttzzzz\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open ('namefile.txt', 'r', encoding='UTF8') as namefile:\n",
+    "    for line in namefile:\n",
+    "        print(line)"
    ]
   },
   {
@@ -267,6 +309,73 @@
     "with open ('Совы нежные.txt', 'r', encoding='UTF8') as MyFile:\n",
     "    for line in MyFile:\n",
     "        print(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33\n",
+      "33\n"
+     ]
+    }
+   ],
+   "source": [
+    "alpha = 'абвгдеёжзийклмнопрстуфхцчшщъыьэюя'\n",
+    "alphaUp = 'АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Рассмотрим практическую задачу\n",
+    "Существует довольно много разных способов, алгоритмов и систем шифрования. Шифр Цезаря, или шифр со сдвигом, — один из самых простых и известных.\n",
+    "\n",
+    "Суть шифра в том, что мы берём некий текст и меняем каждую букву этого текста на другую с заранее заданным сдвигом по алфавиту. Например, мы решаем поменять текст «Привет, мир!» со сдвигом в один символ. Зашифрованный текст будет «Рсйгёу, нйс!». То есть следующая буква после «п» идёт «р», следующая после «р» идёт «с» и так далее.\n",
+    "\n",
+    "Задача: пользователь вводит произвольное целое число, а программа читает некий русский текст из файла и зашифровывает его в другой файл со сдвигом, соответствующим этому числу."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Введите число, на которое необходимо сдвинуть текст: 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "alpha = 'абвгдеёжзийклмнопрстуфхцчшщъыьэюя'\n",
+    "alphaUp = 'АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ'\n",
+    "number = int(input('Введите число, на которое необходимо сдвинуть текст: '))\n",
+    "\n",
+    "summary = ''\n",
+    "\n",
+    "def changeChar(char):\n",
+    "    if char in alpha:\n",
+    "        return alpha[(alpha.index(char) + number) % len(alpha)]\n",
+    "    elif char in alphaUp:\n",
+    "        return alphaUp[(alphaUp.index(char) + number) % len(alphaUp)]\n",
+    "    else:\n",
+    "        return char\n",
+    "with open('Совы нежные.txt', encoding='UTF8') as myFile:\n",
+    "    for line in myFile:\n",
+    "        for char in line:\n",
+    "            summary += changeChar(char)\n",
+    "\n",
+    "with open('output.txt', 'w', encoding='UTF8') as myFile:\n",
+    "    myFile.write(summary)"
    ]
   },
   {
